# tbot

./: .dockerignore  .flake8  Dockerfile  Taskfile.yml  pyproject.toml  run.py
tbot/: bot.py  utils.py
tbot/config/: default.yml
